--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Whack A Cooler!</title>
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <h1>Whack-a-Cooler!</h1>
@@ -50,6 +50,6 @@
                     <td>{{ r['score'] }}</td>
                 </tr>
         </div>
-    <script src="game.js"></script>
+    <script src="../game.js"></script>
 </body>
 </html>
