--- a/static/style.css
+++ b/static/style.css
@@ -82,8 +82,8 @@ h1 {
 .mole {
     background-position: bottom center;
     background-repeat: no-repeat;
-    background-image: url(images/david_before_ed.png);
-    background-size: 50%;
+    background-image: url(../static/images/david_before_ed.png);
+    background-size: contain;
     position: absolute;
     top: 100%;
     width: 100%;
