--- a/static/style/style.css
+++ b/static/style/style.css
@@ -69,7 +69,7 @@ h1 {
 
 .hole:after {
     display: block;
-    background: url(images/table.png) bottom center no-repeat;
+    background: url(../images/table.png) bottom center no-repeat;
     background-size: contain;
     content: '';
     width: 100%;
@@ -82,7 +82,7 @@ h1 {
 .mole {
     background-position: bottom center;
     background-repeat: no-repeat;
-    background-image: url(../static/images/david_before_ed.png);
+    background-image: url(../img/david.after.png);
     background-size: contain;
     position: absolute;
     top: 100%;
