--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,12 @@ h1 {
     margin-bottom: 0;
 }
 
+h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 0;
+}
+
 
 .column {
   float: left;
@@ -82,7 +88,7 @@ h1 {
 .mole {
     background-position: bottom center;
     background-repeat: no-repeat;
-    background-image: url(images/david_before_ed.png);
+    background-image: url(../images/david_before_ed.png);
     background-size: 50%;
     position: absolute;
     top: 100%;
@@ -98,6 +104,6 @@ h1 {
 button {
     background: rgba(190, 19, 19, 0.2);
     border: red;
-    font-size: 3rem;
+    font-size: 2rem;
     cursor: pointer;
 }
