--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -12,12 +12,12 @@
     <h2>You will see the Coolers popping up behind their tables - hit them as often as possible!</h2>
 
     <div class="container-start">
-    <img src="../static/images/adrian_before_ed.png" onmouseover="this.src='../static/images/adrian_after_ed.png'"
-         onmouseout="this.src='../static/images/adrian_before_ed.png'" id="adrian"></img>
-    <img src="../static/images/kathi_before_ed.png" onmouseover="this.src='../static/images/kathi_after_ed.png'"
-         onmouseout="this.src='../static/images/kathi_before_ed.png'" id="kathi"></img>
-    <img src="../static/images/david_before_ed.png" onmouseover="this.src='../static/images/david_after_ed.png'"
-         onmouseout="this.src='../static/images/david_before_ed.png'" id="david"></img>
+    <img src="../static/img/adrian.before.png" onmouseover="this.src='../static/img/adrian.after.png'"
+         onmouseout="this.src='../static/img/adrian.before.png'" id="adrian"></img>
+    <img src="../static/img/kathi.before.png" onmouseover="this.src='../static/img/kathi.after.png'"
+         onmouseout="this.src='../static/img/kathi.before.png'" id="kathi"></img>
+    <img src="../static/img/david.before.png" onmouseover="this.src='../static/img/david.after.png'"
+         onmouseout="this.src='../static/img/david.before.png'" id="david"></img>
     </div>
     <br>
     <div class="container-start">
