--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,7 @@ body {
 
 .start {
     text-align: center;
+    width: 75%;
 }
 
 h1 {
@@ -27,24 +28,13 @@ h1 {
     margin-bottom: 0;
 }
 
-
-.column {
-  float: left;
-}
-
-.left {
-  width: 75%;
-}
-
-.right {
-  width: 25%;
+div {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
 }
 
 
-.score {
-    color: rgb(104, 94, 114);
-    margin-top: 0%;
-}
 
 .game {
     width: 75%;
@@ -55,10 +45,15 @@ h1 {
     float: left;
 }
 
+.score {
+    color: rgb(104, 94, 114);
+    margin-top: 0%;
+    width: 75%;
+}
+
 .highscores {
-    width: 25%;
-    display: flex;
     justify-content: space-evenly;
+    font-size: 1.5rem;
 }
 
 .hole {
