--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,6 @@
         </table>
     </div>
 </div>
-<script src="../game.js"></script>
+<script src="../static/script/game.js"></script>
 </body>
 </html>
