--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
     <h2>Highscores:</h2>
     <div>
         <table>
-            {% for r in score_list %}
+            {% for i in score_list %}
                 <tr>
                     <td>{{ loop.index }}:</td>
                     <td>{{ i['user_name'] }}</td>
