--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Whack A Cooler!</title>
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/welcome.css">
+    <link rel="stylesheet" href="../static/style/welcome.css">
 </head>
 <body>
     <h1>Whack-a-Cooler!</h1>
