added remainint time

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
 {% if user_name %}
     <h2>Active Player: {{ user_name }}</h2>
 {% endif %}
+<div class="remainingTime" id="remainingTime">
+    Remaining time: 10
+</div>
 <h1 class="score"> 0</h1>
 <div class="start">
     <button onClick="initGame()">Start!</button>
