--- a/static/style/style.css
+++ b/static/style/style.css
@@ -28,11 +28,12 @@ h1 {
     margin-bottom: 0;
 }
 
-h2 {
-    text-align: center;
+h2, .remainingTime {
+    text-align: left;
     font-size: 2rem;
     margin-bottom: 0;
 }
+
 
 div {
     word-wrap: break-word;
@@ -66,6 +67,7 @@ div {
     overflow: hidden;
     position: relative;
 }
+
 
 .hole:after {
     display: block;
