some optical changes

--- a/static/style/welcome.css
+++ b/static/style/welcome.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Shadows Into Light', cursive;
     background-image: url("../images/welcome.png");
     background-repeat: no-repeat;
-    background-color: #FFFFFF;
+    background-color: #ebf2fc;
     background-attachment:fixed;
     background-position:center;
 
