--- a/static/style/style.css
+++ b/static/style/style.css
@@ -4,11 +4,7 @@ html {
     box-sizing: border-box;
     font-size: 10px;
     background-color: #ebf2fc;
-    background-image: linear-gradient(315deg, #e6e7f3 0%, #d0d3e5 74%);
-}
-
-*, *:before, *:after {
-    box-sizing: inherit;
+    background-image: linear-gradient(315deg, #eff0f6 0%, #d0d3e5 74%);
 }
 
 body {
@@ -62,14 +58,14 @@ div {
     font-size: 1.5rem;
 }
 
-.hole {
+.table {
     flex: 1 0 33.33%;
     overflow: hidden;
     position: relative;
 }
 
 
-.hole:after {
+.table:after {
     display: block;
     background: url(../images/table.png) bottom center no-repeat;
     background-size: contain;
@@ -81,7 +77,7 @@ div {
     bottom: 0px;
 }
 
-.mole {
+.cooler {
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -92,13 +88,13 @@ div {
     transition: all 0.4s ease;
 }
 
-.hole.up .mole {
+.table.up .cooler {
     top: 0;
 }
 
 button {
-    background: rgba(190, 19, 19, 0.2);
-    border: red;
+    background: rgba(19, 67, 190, 0.2);
+    border: #003cff;
     font-size: 3rem;
     cursor: pointer;
 }
