--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../static/style/style.css">
 </head>
 <body>
+    <div class="hidden" id="username">{{ user_name }}</div>
+
     <h1>Whack-a-Cooler!</h1>
 
     {% if user_name %}
